making some changes to revert

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,24 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a digit:5\n",
-      "Numbre is odd\n"
+      "enter a digit:-6\n",
+      "Enter number greater than 0\n"
      ]
     }
    ],
    "source": [
     "x=int(input(\"enter a digit:\"))\n",
-    "if (x%2==0):\n",
-    "    print(\"Number is even\")\n",
+    "if(x<0):\n",
+    "    print(\"Enter number greater than 0\")\n",
     "else:\n",
-    "    print(\"Numbre is odd\")"
+    "    \n",
+    "        if (x%2==0):\n",
+    "            print(\"Number is even\")\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Numbre is odd\")\n",
+    "    "
    ]
   }
  ],
