--- a/sample.ipynb
+++ b/sample.ipynb
@@ -24,7 +24,7 @@
     "            print(\"Number is even\")\n",
     "\n",
     "        else:\n",
-    "            print(\"Numbre is odd\")\n",
+    "            print(\"Number is odd\")\n",
     "    "
    ]
   }
