Revert "spelling mistake correction"
This reverts commit 5db2b2ad5094120d3139184572e08fba6747c6eb.

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -24,7 +24,7 @@
     "            print(\"Number is even\")\n",
     "\n",
     "        else:\n",
-    "            print(\"Number is odd\")\n",
+    "            print(\"Numbre is odd\")\n",
     "    "
    ]
   }
