--- a/sample.ipynb
+++ b/sample.ipynb
@@ -21,7 +21,7 @@
     "else:\n",
     "    \n",
     "        if (x%2==0):\n",
-    "            print(\"Number is even\")\n",
+    "            print(\"Numbr is even\")\n",
     "\n",
     "        else:\n",
     "            print(\"Numbre is odd\")\n",
