spelling mistake corrected

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -21,10 +21,10 @@
     "else:\n",
     "    \n",
     "        if (x%2==0):\n",
-    "            print(\"Numbr is even\")\n",
+    "            print(\"Number is even\")\n",
     "\n",
     "        else:\n",
-    "            print(\"Numbre is odd\")\n",
+    "            print(\"Number is odd\")\n",
     "    "
    ]
   }
