printing no as well along with its odd or even

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a digit:-6\n",
-      "Enter number greater than 0\n"
+      "enter a digit:6\n",
+      "Given Number 6 is even\n"
      ]
     }
    ],
@@ -21,10 +21,10 @@
     "else:\n",
     "    \n",
     "        if (x%2==0):\n",
-    "            print(\"Number is even\")\n",
+    "            print(f\"Given Number {x} is even\")\n",
     "\n",
     "        else:\n",
-    "            print(\"Number is odd\")\n",
+    "            print(f\"Given Number {x} is odd\")\n",
     "    "
    ]
   }
