Resolved merge conflict!

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,29 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a digit:6\n",
-      "Given Number 6 is even\n"
      ]
     }
    ],
    "source": [
-    "x=int(input(\"enter a digit:\"))\n",
-    "if(x<0):\n",
-    "    print(\"Enter number greater than 0\")\n",
-    "else:\n",
+    "def whatno(x):\n",
+    "#x=int(input(\"enter a digit:\"))\n",
+    "    if(x<0):\n",
+    "        print(\"Enter number greater than 0\")\n",
+    "    \n",
+    "    elif(x==0)\n",
+    "        \n",
+    "         print(\"Zero\")\n",
+    "    else:\n",
     "    \n",
     "        if (x%2==0):\n",
     "            print(f\"Given Number {x} is even\")\n",
     "\n",
     "        else:\n",
     "            print(f\"Given Number {x} is odd\")\n",
+    "            \n",
+    "\n",
+    "\n",
     "    "
    ]
   }
